--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_MODEL_LOCATION=https://teachablemachine.withgoogle.com/models/vT_9v3576/
+REACT_APP_MODEL_LOCATION=https://teachablemachine.withgoogle.com/models/lBB0eLQKH/
+# REACT_APP_MODEL_LOCATION=https://teachablemachine.withgoogle.com/models/vT_9v3576/
+REACT_APP_URL=http://localhost:3000/
